--- a/src/WebBundle/Resources/views/TestpaperManage/testpaper-list-tr.html.twig
+++ b/src/WebBundle/Resources/views/TestpaperManage/testpaper-list-tr.html.twig
@@ -12,7 +12,7 @@
   <td>
     {{'%itemCount%题'|trans({'%itemCount%': testpaper.itemCount})}} <span class="text-muted">/</span> {{'%score%分'|trans({'%score%': testpaper.score})}}
     {% if testpaper.passedCondition > 0 %}
-      <div class="text-muted"><small>{{'及格%passedCondition%分'|trans({'%passedCondition%': testpaper.passedCondition })}}</small></div>
+      <div class="text-muted"><small>{{'及格%passedCondition%分'|trans({'%passedCondition%': testpaper.passedCondition[0] })}}</small></div>
     {% endif %}
   </td>
   <td>
