--- a/src/WebBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/modal.html.twig
@@ -101,12 +101,12 @@
             做练习题
           </a>
         </li>
-        <li class="col-xs-3 task-manage-type-item js-course-tasks-item">
+        <!-- <li class="col-xs-3 task-manage-type-item js-course-tasks-item">
           <a data-role="activityType">
             <i class="es-icon es-icon-lesson"></i>
             参加考试
           </a>
-        </li>
+        </li> -->
         <li class="col-xs-3 task-manage-type-item js-course-tasks-item">
           <a data-role="activityType">
             <i class="es-icon es-icon-comment"></i>
