--- a/src/WebBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/modal.html.twig
@@ -89,12 +89,12 @@
             下载资料
           </a>
         </li>
-        <li class="col-xs-3 task-manage-type-item js-course-tasks-item">
+        <!-- <li class="col-xs-3 task-manage-type-item js-course-tasks-item">
           <a data-role="activityType">
             <i class="es-icon es-icon-exam"></i>
             做作业题
           </a>
-        </li>
+        </li> -->
         <li class="col-xs-3 task-manage-type-item js-course-tasks-item">
           <a data-role="activityType">
             <i class="es-icon es-icon-mylibrarybooks"></i>
