--- a/src/WebBundle/Resources/views/Component/Parts/materiallib-choose.html.twig
+++ b/src/WebBundle/Resources/views/Component/Parts/materiallib-choose.html.twig
@@ -2,7 +2,8 @@
 <div class="btn-group">
   <a type="button" class="btn btn-default btn-sm js-material-type active"
      data-type="my">{{ '来自上传'|trans }}</a>
-  <a type="button" class="btn btn-default btn-sm js-material-type" data-type="sharing" data-sharing-contacts-url="{{ path('media_materiallib_contacts') }}">{{ '来自分享'|trans }}</a>
+  <a type="button" class="btn btn-default btn-sm js-material-type" data-type="sharing"
+     data-sharing-contacts-url="{{ path('media_materiallib_contacts') }}">{{ '来自分享'|trans }}</a>
   <a type="button" class="btn btn-default btn-sm js-material-type" data-type="public">{{ '公共资料'|trans }}</a>
   <a type="button" class="btn btn-default btn-sm js-material-type" data-type="favorite">{{ '我的收藏'|trans }}</a>
 </div>
