--- a/src/WebBundle/Resources/views/Component/file-choose.html.twig
+++ b/src/WebBundle/Resources/views/Component/file-choose.html.twig
@@ -31,10 +31,11 @@
     <div class="tab-pane" id="chooser-course-panel">
       {% include 'WebBundle:Component/Parts:course-file-choose.html.twig' %}
     </div>
-
-    <div class="tab-pane" id="chooser-import-panel">
-      {% include 'WebBundle:Component/Parts:import-video.html.twig' %}
-    </div>
+    {% if mediaType == 'video' %}
+      <div class="tab-pane" id="chooser-import-panel">
+        {% include 'WebBundle:Component/Parts:import-video.html.twig' %}
+      </div>
+    {% endif %}
   </div>
 </div>
 <div class="col-xs-offset-2 col-xs-9">
