--- a/src/WebBundle/Resources/views/PptActivity/edit-modal.html.twig
+++ b/src/WebBundle/Resources/views/PptActivity/edit-modal.html.twig
@@ -1,12 +1,12 @@
 {% extends 'WebBundle:Activity:activity-form-layout.html.twig' %}
 {% do script(['web/activity-manage/ppt-activity-fields.js']) %}
+{% set mediaType = 'ppt' %}
 {% block activity_content %}
   <div class="form-group">
     <div class="col-xs-2 control-label">
       <label for="media" class="style">PPT</label>
     </div>
     <div id="file-choose-type" class="hidden" data-type="ppt"></div>
-    {% set mediaType = 'ppt' %}
     {% include 'WebBundle:Component:file-choose.html.twig' %}
   </div>
 {% endblock %}
@@ -19,8 +19,8 @@
     </div>
     <div class="col-xs-4 controls">
       <select class="form-control" id="condition-select" name="finishType">
-        <option value="end">观看到最后一页</option>
-        <option value="detail">至少观看X分钟</option>
+        <option value="end" {% if ppt.finishType|default('end') == 'end' %}selected{% endif %}>观看到最后一页</option>
+        <option value="detail" {% if ppt.finishType|default('end') == 'detail' %}selected{% endif %}>至少观看X分钟</option>
       </select>
     </div>
   </div>
@@ -29,7 +29,7 @@
       <label for="condition-detail">{{ '至少观看'|trans }}</label>
     </div>
     <div class="col-xs-4 controls">
-      <input id="condition-detail" class="form-control" type="text" name="finishDetail" value="1">
+      <input id="condition-detail" class="form-control" type="text" name="finishDetail" value="{{ ppt.finishDetail|default(1) }}">
     </div>
     <div class="col-xs-4 controls">
       <p class="form-control-static">分钟</p>
