--- a/app/Resources/assets/libs/vendor.less
+++ b/app/Resources/assets/libs/vendor.less
@@ -3,7 +3,6 @@
 @import '~nodeModulesDir/font-awesome/css/font-awesome.css';
 @import './less/bootstrap/less/bootstrap.less';
 @import './less/es-icon.css';
-// @import '~nodeModulesDir/bootstrap-datetimepicker/src/less/bootstrap-datetimepicker.less';
-// @import '~nodeModulesDir/bootstrap-datepicker-webpack/dist/css/bootstrap-datepicker.css';
+@import '~nodeModulesDir/bootstrap-datepicker-webpack/dist/css/bootstrap-datepicker.css';
 //能不能获取到当前的主色染后自动打包对应的一个主色;????
 @brand-primary:         #46c37b;
