disabled js translate

--- a/src/Topxia/WebBundle/Resources/views/script_boot.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/script_boot.html.twig
@@ -58,7 +58,7 @@
 <script src="{{ asset('assets/libs/seajs/seajs-text/1.1.1/seajs-text.min.js') }}"></script>
 <script src="{{ asset('assets/libs/seajs-global-config.js') }}"></script>
 <script src="{{ asset('bundles/bazingajstranslation/js/translator.min.js') }}"></script>
-<script src="{{ url('bazinga_jstranslation_js') }}"></script>
+{#<script src="{{ url('bazinga_jstranslation_js') }}"></script>#}
 <script>
   seajs.use(app.mainScript);
 </script>
