--- a/src/WebBundle/Resources/views/AudioActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/AudioActivity/modal.html.twig
@@ -3,6 +3,7 @@
 {% do script([ 'web/activity-manage/video-activity-fields.js']) %}
 {% block activity_content %}
   {% set mediaType = activity.mediaType|default('audio') %}
+  {% set fileType = 'audio' %}
   <div class="form-group">
     <div class="col-xs-2 control-label">
       <label for="text-content-field" class="style1">{{ '简介'|trans }}</label>
