--- a/src/WebBundle/Resources/views/Component/Parts/course-file-choose.html.twig
+++ b/src/WebBundle/Resources/views/Component/Parts/course-file-choose.html.twig
@@ -3,4 +3,4 @@
 <div data-role="course-file-browser"
      data-url="{{ path('media_corusefile_choose', {courseId:courseId, type:'video', courseType:'course'}) }}">
 </div>
-<input type="hidden" name="type" value="{{ mediaType }}">
+<input type="hidden" name="type" value="{{ fileType|default('') }}">
