--- a/src/WebBundle/Resources/views/HomeworkManage/question-picker.html.twig
+++ b/src/WebBundle/Resources/views/HomeworkManage/question-picker.html.twig
@@ -1,14 +1,15 @@
-{% extends 'TopxiaWebBundle::bootstrap-modal-layout.html.twig' %}
+{% extends 'TopxiaWebBundle::bootstrap-modal-layout-webpack.html.twig' %}
 
 {% set modal_class = 'modal-lg' %}
 
 {% set replaceFor= replaceFor|default(null) %}
+{% do script(['web/question-manage/question-picker.js']) %}
 
 {% block title %}{% if replaceFor %}替换{% else %}选择{% endif %}题目{% endblock %}
 
 {% block body %}
-<div id="homework-item-picker-body">
-  <form id="homework-item-picker-form" class="form-inline well well-sm" action="{{ path('course_manage_homework_question_picker', {courseId:course.id}) }}" novalidate>
+<div id="question-picker-body">
+  <form id="question-search-form" class="form-inline well well-sm" action="{{ path('course_manage_homework_question_picker', {courseId:course.id}) }}" novalidate>
     <div class="form-group">
       <select class="form-control" name="target" style="width:200px;height:32px;">
         {{ select_options(targetChoices, app.request.query.get('target'), '--按从属--') }}
@@ -22,7 +23,7 @@
     <input type="hidden" name="excludeIds" value="{{ conditions.excludeIds|default('')|join(',')|default(null) }}">
     <input type="hidden" name="type" value="{{ conditions.type|default(null)}}">
 
-    <button class="btn btn-primary btn-sm">搜索</button>
+    <button class="btn btn-primary btn-sm search-question-btn">搜索</button>
 
   </form>
 
@@ -53,7 +54,6 @@
   {% endif %}
   {{ web_macro.paginator(paginator) }}
 </div>
-  <script>app.load('homework-manage/homework-item-picker')</script>
 
 {% endblock %}
 
