--- a/src/WebBundle/Resources/views/TestpaperActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/TestpaperActivity/modal.html.twig
@@ -1,9 +1,9 @@
 {% extends 'WebBundle:Activity:activity-form-layout.html.twig' %}
 {% do css(['web.css']) %}
-{% do script(['web/activity-manage/testpaper-activity-fields.js'], 300) %}
+{% do script(['libs/bootstrap-datetimepicker.js','web/activity-manage/testpaper-activity-fields.js'], 300) %}
 
 {% block activity_content %}
-  <form id="#step2-form" class="form-horizontal lesson-form" method="post">
+  <form id="step2-form" class="form-horizontal lesson-form" method="post">
     <div class="form-group">
       <div class="col-xs-2 control-label">
         <label for="lesson-mediaId-field">{{'试卷'|trans}}</label>
@@ -53,16 +53,9 @@
         {{ radios('testMode', {'normal':'不限'|trans, 'realTime':'指定'|trans}, activity.testMode|default('normal')) }}
 
         <label class="starttime-input" {% if activity.testMode|default('normal') == 'normal' %}style="display:none;" {% endif %}>
-          <input class="form-control width-input width-input-large" type="text" name="startTime" value="{{ activity.startTime|default('0')|date('Y-m-d H:i') }}">
+          <input class="form-control width-input width-input-large" type="text" name="startTime" value="{{ activity.startTime|default("now"|date('Y-m-d H:i'))|date('Y-m-d H:i') }}">
         </label>
         <div class="help-block"></div>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <div class="col-xs-2 control-label"><label for="activity-title">{{'标题'|trans}}</label></div>
-      <div class="col-xs-9 controls">
-        <input id="activity-title" class="form-control" type="text" name="title" value="{{ activity.title|default('') }}">
       </div>
     </div>
 
