--- a/src/Topxia/WebBundle/Resources/views/Order/order-table.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Order/order-table.html.twig
@@ -10,7 +10,7 @@
 {% set mode = mode|default(['my']) %}
   <thead>
     <tr>
-      <th>{{'名称'|trans}}</th>
+      <th>{{'订单名称'|trans}}</th>
       <th>{{'创建时间'|trans}}</th>
       <th>{{'状态'|trans}}</th>
       <th>{{'实付(元)'|trans}}</th>
