--- a/src/Topxia/AdminBundle/Resources/views/Announcement/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Announcement/index.html.twig
@@ -15,7 +15,7 @@
   <table id="announcement-table" class="table table-striped">
     <thead>
     <tr>
-      <th width="25%">{{'公告信息'|trans}}</th>
+      <th width="25%">{{'公告内容'|trans}}</th>
       {% include 'OrgBundle:Org/Parts:table-thead-tr.html.twig' %}
       <th>{{'发布时间'|trans}}</th>
       <th>{{'结束时间'|trans}}</th>
