--- a/src/Topxia/WebBundle/Resources/views/Category/explore-nav.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Category/explore-nav.html.twig
@@ -21,9 +21,19 @@
       <li><a class="nav-link" href="">中级</a></li>
       <li class="active"><a class="nav-link" href="">高级</a></li>
     </ul>
-    <a class="js-tabs-toggle tabs-toggle tabs-hide">展开</a>
+    <a class="js-tabs-toggle tabs-toggle tabs-hide hidden">展开</a>
   </div>
-  <div  class="tabs-group">
+  <div class="tabs-group" style="height: 50px;">
+    <div class="title"></div>
+    <ul class="content clearfix">
+      <li><a class="nav-link" href="">全部</a></li>
+      <li><a class="nav-link" href="">初级</a></li>
+      <li><a class="nav-link" href="">中级</a></li>
+      <li class="active"><a class="nav-link" href="">高级</a></li>
+    </ul>
+    <a class="js-tabs-toggle tabs-toggle tabs-hide hidden">展开</a>
+  </div>
+  <div  class="tabs-group" style="height: 50px;">
     <div class="title">分类</div>
     <ul class="content clearfix">
       <li><a class="nav-link active" href="">全部</a></li>
@@ -31,6 +41,7 @@
       <li><a class="nav-link" href="">编程</a></li>
       <li><a class="nav-link" href="">美术</a></li>
     </ul>
+    <a class="js-tabs-toggle tabs-toggle tabs-hide hidden">展开</a>
   </div>
 </div>
 <div class="es-tabs">
