--- a/web/assets/v2/less/component/tabs-wrapper.less
+++ b/web/assets/v2/less/component/tabs-wrapper.less
@@ -8,13 +8,14 @@
     overflow-y: hidden;
     .title {
       float: left;
-      padding: 15px 12px;
-
+      padding: 15px 0;
+      width: 100px;
+      .text-overflow;
     }
     .content {
       list-style: none;
       padding: 0;
-      margin: 0 0 0 55px;
+      margin: 0 0 0 100px;
       > li {
         float: left;
         padding: 10px 12px;
