--- a/src/WebBundle/Resources/views/LiveActivity/show.html.twig
+++ b/src/WebBundle/Resources/views/LiveActivity/show.html.twig
@@ -34,7 +34,7 @@
 		liveId: '{{activity.ext.liveId}}',
 		liveProvider: '{{activity.ext.liveProvider}}',
 		isTeacher: !!{{activity.isTeacher}},
-		replayStatus: 'videoGenerated', //
+		replayStatus: null, //'videoGenerated'
 		liveMediaError: null,
 		replays: null,
 		summary: '{{activity.remark}}',
