--- a/src/WebBundle/Resources/assets/less/task-manage/task-manage.less
+++ b/src/WebBundle/Resources/assets/less/task-manage/task-manage.less
@@ -50,3 +50,13 @@
 .task-iframe-body {
   background-color: #fff;
 }
+
+.task-manage-header {
+  padding-top: 22px-15px;
+  padding-bottom: 28px;
+  font-size: 16px;
+  line-height: 30px;
+  .space {
+    margin-right: 50px;
+  }
+}
