--- a/src/WebBundle/Resources/views/DownLoadActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/DownLoadActivity/modal.html.twig
@@ -7,20 +7,21 @@
     <div class="form-group">
       <div class="col-md-10 col-md-offset-1  controls">
         <ul class="list-group" id="material-list">
-          {% for media in activity.ext.media|default(null) %}
+          {% for media in activity.ext.materials|default(null) %}
             <li class="list-group-item clearfix" data-id="{{ media.link|default(media.id) }}">
               <button class="close delete-btn" type="button" title="{{ '删除'|trans }}"
                       data-url="">&times;</button>
-              {% if media.source == 'self' %}
-                <a href="{{ media.id }}" target="_blank">{{ media.name }}</a>
+              {% if media.link|default(null) %}
+                <a href="{{ media.id }}" target="_blank">{{ media.title }}</a>
                 <span class="glyphicon glyphicon-new-window text-muted text-sm" title="{{ '网络链接资料'|trans }}"></span>
               {% else %}
-                <a href="{{ media.link }}" target="_blank">{{ media.name }}</a>
+                <a href="{{ media.link }}" target="_blank">{{ media.title }}</a>
               {% endif %}
             </li>
+
           {% endfor %}
         </ul>
-        {% if not activity.ext.media|default(null) %}
+        {% if not activity.ext.materials|default(null) %}
           <div class="empty js-empty-list">
             <span class="control-text text-warning">{{ '暂无资料，请上传。'|trans }}</span>
           </div>
@@ -66,7 +67,7 @@
       <label>{{ '完成条件'|trans }}</label>
     </div>
     <div class="col-xs-9">
-      <p class="form-control-static">观看到最后</p>
+      <p class="form-control-static">下载过资料</p>
     </div>
   </div>
 {% endblock %}
