--- a/src/WebBundle/Resources/views/FileChooser/file-choose.html.twig
+++ b/src/WebBundle/Resources/views/FileChooser/file-choose.html.twig
@@ -1,4 +1,4 @@
-{% do script(['web/component/file-choose.js']) %}
+{% do script(['web/file-chooser/file-choose.js']) %}
 <div class="file-chooser-bar {% if not  activity.ext.media|default(null) %}hidden {% endif %}">
   <span data-role="placeholder">{{ activity.ext.media.name|default(null) }}</span>
   <button class="btn btn-link btn-sm js-choose-trigger" type="button"><i
@@ -21,19 +21,19 @@
   </ul>
   <div class="tab-content">
     <div class="tab-pane active" id="chooser-upload-panel">
-      {% include 'WebBundle:Component/Parts:upload-file.html.twig' %}
+      {% include 'WebBundle:FileChooser/Parts:upload-file.html.twig' %}
     </div>
 
     <div class="tab-pane" id="chooser-material-panel">
-      {% include 'WebBundle:Component/Parts:materiallib-choose.html.twig' %}
+      {% include 'WebBundle:FileChooser/Parts:materiallib-choose.html.twig' %}
     </div>
 
     <div class="tab-pane" id="chooser-course-panel">
-      {% include 'WebBundle:Component/Parts:course-file-choose.html.twig' %}
+      {% include 'WebBundle:FileChooser/Parts:course-file-choose.html.twig' %}
     </div>
 
     <div class="tab-pane" id="chooser-import-panel">
-      {% include 'WebBundle:Component/Parts:import-video.html.twig' %}
+      {% include 'WebBundle:FileChooser/Parts:import-video.html.twig' %}
     </div>
   </div>
 </div>
