--- a/src/WebBundle/Resources/views/AudioActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/AudioActivity/modal.html.twig
@@ -21,7 +21,7 @@
     <div class="col-xs-2 control-label">
       <label for="media" class="style">{{ '音频'|trans }}</label>
     </div>
-    {% include 'WebBundle:Component:file-choose.html.twig' %}
+    {% include 'WebBundle:FileChooser:file-choose.html.twig' %}
   </div>
   <div class="form-group for-video-type" id="lesson-length-form-group">
     <div class="col-xs-2 control-label for-video-type">
