优化任务列表的展示

--- a/src/WebBundle/Resources/views/TaskManage/list-item.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/list-item.html.twig
@@ -10,7 +10,13 @@
 <li class="task-manage-item clearfix ">
   <div class="item-line"></div>
   <div class="item-content text-overflow">
-    <i class="es-icon es-icon-yidong mrm"></i><i class="es-icon es-icon-videoclass mrm"></i><span class="label label-success mrm">选修</span>{{task.title}}<span class="color-gray">（12:02）</span>
+    <i class="es-icon es-icon-yidong mrm"></i>
+    <i class="es-icon {{task['activity_meta']['icon']}} mrm"></i>
+    {% if task.isOptional %}
+    <span class="label label-success mrm">选修</span>
+    {% endif %}
+    {{task.title}}
+    <span class="color-gray">{{ task['activity_meta']['length'] | default('')}}</span>
   </div>
 
   <div class="item-actions">
