--- a/src/WebBundle/Resources/views/PptActivity/edit-modal.html.twig
+++ b/src/WebBundle/Resources/views/PptActivity/edit-modal.html.twig
@@ -20,11 +20,11 @@
     <div class="col-xs-4 controls">
       <select class="form-control" id="condition-select" name="finishType">
         <option value="end" {% if ppt.finishType|default('end') == 'end' %}selected{% endif %}>观看到最后一页</option>
-        <option value="detail" {% if ppt.finishType|default('end') == 'detail' %}selected{% endif %}>至少观看X分钟</option>
+        <option value="time" {% if ppt.finishType|default('end') == 'time' %}selected{% endif %}>至少观看X分钟</option>
       </select>
     </div>
   </div>
-  <div class=" form-group hidden" id="condition-group">
+  <div class=" form-group {% if ppt.finishType|default('end') != 'time' %}hidden{% endif %}" id="condition-group">
     <div class="col-xs-2 control-label">
       <label for="condition-detail">{{ '至少观看'|trans }}</label>
     </div>
