--- a/src/Topxia/WebBundle/Resources/views/CourseManage/Dashboard/course.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseManage/Dashboard/course.html.twig
@@ -19,7 +19,7 @@
     </li>
   </ul>
 
-  <div id="main" style="height:400px;"></div>
+  <div id="course-dashboard-container" style="height:400px;" data-days="{{ days|json_encode }}" data-student-num="{{ studentNum|json_encode }}" data-finished-num="{{ finishedNum|json_encode }}" data-finished-rate="{{ finishedRate|json_encode }}"></div>
 
   <ul class="course-dashboard-footer course-dashboard-ul">
     <li>
