--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/set.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/set.html.twig
@@ -39,6 +39,7 @@
       </div>
       <div class="controls col-md-7 radios">
         {{ radios('explore_default_orderBy', {createdTime:'最新'|trans, studentNum:'最热'|trans,recommendedSeq:'推荐'|trans}, classroomSetting.explore_default_orderBy) }}
+        <p class="help-block"><a target="_blank" href="{{ path('classroom_explore') }}">班级列表页</a>地址：域名/classroom/explore,任何人都可在此页面查看网站所有已发布班级,如需设置网站首页课程排序，请到【站点设置】-【主题】-【管理】中设置，目前仅简墨和雅致简洁主题支持。</p>
       </div>
     </div>
 
