webpack 添加目录copy功能

--- a/src/WebBundle/Resources/views/Activity/activity-form-layout.html.twig
+++ b/src/WebBundle/Resources/views/Activity/activity-form-layout.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaWebBundle::layout.html.twig' %}
 {% do css(['web.css']) %}
-{% do script(['libs/ckeditor.js','libs/jquery-validation.js'], 500) %}
+{% do script(['libs/ckeditor/ckeditor.js','libs/jquery-validation.js'], 500) %}
 
 {% block body %}
   <div class="tab-content" id="iframe-content">
