--- a/src/WebBundle/Resources/views/TextActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/TextActivity/modal.html.twig
@@ -1,5 +1,5 @@
 {% extends 'WebBundle:Activity:activity-form-layout.html.twig' %}
-{% do script(['web/activity-manage/text-activity-fields.js'], 300) %}
+{% do script(['libs/ckeditor/ckeditor.js','web/activity-manage/text-activity-fields.js'], 300) %}
 
 {% block activity_content %}
   <div class=" form-group">
