--- a/src/Topxia/WebBundle/Resources/views/CourseLesson/lesson-data-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLesson/lesson-data-modal.html.twig
@@ -1,6 +1,10 @@
 {% set modal_class= "modal-lg" %}
 {% extends 'TopxiaWebBundle::bootstrap-modal-layout.html.twig' %}
-{% block title %}{{lesson.title}}{{'课时的数据'|trans}}{% endblock %}
+
+{% block title %}
+  {{ '学员学习详情'|trans }} ({{ '课时'|trans }}{{ lesson.seq }}: {{lesson.title}})
+{% endblock %}
+
 {% block body %}
   <div class="table-responsive">
     <table class="table table-bordered" style="word-break:break-all;text-align:center;">
