--- a/src/Topxia/AdminBundle/Resources/views/ArticleCategory/tbody.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/ArticleCategory/tbody.html.twig
@@ -6,6 +6,10 @@
         <div class="row empty">{{'暂无分类记录'|trans}}</div>
     {% endif %}
 </li>
+<div class="alert alert-info">
+
+    fenjk
+</div>
 
 {% do load_script('category/tbody') %}
 
