--- a/src/Topxia/AdminBundle/Resources/views/System/mobile.setting.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/mobile.setting.html.twig
@@ -201,5 +201,7 @@
   </div>
 
 </form>
-
+<div class="alert alert-info">
+  <strong>网校说明设置后会显示在浏览器的网页介绍中，网校logo设置后显示顶部导航左上角</strong>
+</div>
 {% endblock %}
