--- a/src/Topxia/AdminBundle/Resources/views/Notification/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Notification/index.html.twig
@@ -47,12 +47,15 @@
                     </td>
                 </tr>
             {% endfor %}
-        {% endif %}
+          {% endif %}
     </tbody>
 </table>
   {% if not batchnotifications %}
-  <div class="empty">{{'暂无站内信'|trans}}</div>
+    <div class="empty">{{'暂无站内信'|trans}}</div>
   {% endif %}
+  <div class="alert alert-info text-center">
+    全站站内通知将以系统消息形式发送给网校所有已注册用户。
+  </div>
 
   {{ admin_macro.paginator(paginator) }}
 {% endblock %}
