--- a/src/Topxia/AdminBundle/Resources/views/System/payment.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/payment.html.twig
@@ -17,7 +17,7 @@
       {{ radios('enabled', {1:'开启'|trans, 0:'关闭'|trans}, payment.enabled) }}
     </div>
   </div>
-
+    
   <div class="form-group">
     <div class="col-md-3 control-label">
       <label for="disabled_message">{{'支付关闭时的提示信息'|trans}}</label>
@@ -25,6 +25,11 @@
     <div class="controls col-md-8">
       <textarea id="disabled_message" name="disabled_message" class="form-control">{{payment.disabled_message}}</textarea>
     </div>
+  </div>
+
+    <div class="alert alert-info">
+      <p>1、【支付功能】关闭时，支付宝、微信支付、连连支付等，自动同步关闭；</p>
+      <p>2、在【支付功能】关闭的情况下，开启支付宝、微信支付、连连支付等，系统都提示：请先开启上方【支付功能】。</p>
   </div>
 
   {% include 'TopxiaAdminBundle:System/Pay:alipay.html.twig'%}
@@ -41,5 +46,4 @@
   </div>
   <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
 </form>
-
 {% endblock %}
