--- a/src/WebBundle/Resources/views/FileChooser/Parts/import-link.html.twig
+++ b/src/WebBundle/Resources/views/FileChooser/Parts/import-link.html.twig
@@ -1,4 +1,4 @@
-{% do script(['web/component/chooser/import-link.js']) %}
+{#{% do script(['web/component/chooser/import-link.js']) %}#}
 
 <div class="tab-pane" id="video-chooser-import-pane">
     <input class="form-control" id="link"  name="link" type="text" placeholder="{{ '链接地址'|trans }}">
