--- a/src/WebBundle/Resources/views/FileChooser/Parts/materiallib-choose.html.twig
+++ b/src/WebBundle/Resources/views/FileChooser/Parts/materiallib-choose.html.twig
@@ -1,4 +1,4 @@
-{% do script(['web/file-chooser/chooser/materiallib-choose.js']) %}
+{#{% do script(['web/file-chooser/chooser/materiallib-choose.js']) %}#}
 <div class="btn-group">
   <a type="button" class="btn btn-default btn-sm js-material-type active"
      data-type="my">{{ '来自上传'|trans }}</a>
