--- a/app/Resources/assets/libs/vendor.less
+++ b/app/Resources/assets/libs/vendor.less
@@ -6,5 +6,7 @@
 
 @import '~nodeModulesDir/bootstrap-datetime-picker/css/bootstrap-datetimepicker.css';
 
-//能不能获取到当前的主色染后自动打包对应的一个主色;????
-@brand-primary:         #46c37b;
+// //能不能获取到当前的主色染后自动打包对应的一个主色;????
+// @brand-primary:         #46c37b;
+
+@import './less/color.less';
