--- a/src/WebBundle/Resources/views/TaskManage/list.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/list.html.twig
@@ -43,23 +43,23 @@
       <div class="task-manage-header clearfix">
         任务总数：<span class="color-warning space">121</span> 日均约需完成：<span class="color-warning">2.5</span> 个任务
         <div class="pull-right">
-          <button class="btn btn-info btn-sm" id="lesson-create-btn" data-toggle="modal" data-target="#modal" data-backdrop="static" data-keyboard="false" data-url="{{ path('course_manage_task_create', {courseId:1}) }}"><i class="glyphicon glyphicon-plus"></i> 任务 </button>
+          <button class="btn btn-info btn-sm" id="lesson-create-btn" data-toggle="modal" data-target="#modal" data-backdrop="static" data-keyboard="false" data-url="{{ path('course_manage_task_create', {courseId:1}) }}"><i class="es-icon es-icon-anonymous-iconfont"></i> 任务 </button>
           <div class="btn-group">
             <button type="button" class="btn btn-sm btn-success dropdown-toggle" data-toggle="dropdown">
-              <i class="glyphicon glyphicon-plus"></i>
+              <i class="es-icon es-icon-anonymous-iconfont"></i>
               {{ setting('default.chapter_name')|default('章'|trans) }}/{{ setting('default.part_name')|default('节'|trans) }}
               <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" role="menu">
               <li>
                 <a href="#" id="chapter-create-btn" data-toggle="modal" data-target="#modal" data-backdrop="static" data-keyboard="false" data-url="{{ path('course_manage_chapter_create', {id:course.id}) }}">
-                  <i class="glyphicon glyphicon-plus"></i>
+                  <i class="es-icon es-icon-anonymous-iconfont"></i>
                   {{'添加%chapter_name%'|trans({'%chapter_name%': setting('default.chapter_name')|default('章'|trans)})}}
                 </a>
               </li>
               <li>
                 <a href="#" id="chapter-create-btn" data-toggle="modal" data-target="#modal" data-backdrop="static" data-keyboard="false" data-url="{{ path('course_manage_chapter_create', {id:course.id, type:'unit'}) }}">
-                  <i class="glyphicon glyphicon-plus"></i>
+                  <i class="es-icon es-icon-anonymous-iconfont"></i>
                   {{'添加%part_name%'|trans({'%part_name%': setting('default.part_name')|default('节')})}}
                 </a>
               </li>
@@ -71,7 +71,7 @@
       <ul class="task-manage-list">
         <li class="task-manage-item task-manage-chapter clearfix">
           <div class="item-content">
-            <i class="es-icon es-icon-yidong mrm"></i>第<span class="number">1</span>章：11
+            <i class="es-icon es-icon-importexport mrm"></i>第<span class="number">1</span>章：11
           </div>
           <div class="item-actions">
             <span class="dropdown">
@@ -96,7 +96,7 @@
         </li>
         <li class="task-manage-item task-manage-unit clearfix">
           <div class="item-content">
-            <i class="es-icon es-icon-yidong mrm"></i>第<span class="number">1</span>节：111
+            <i class="es-icon es-icon-importexport mrm"></i>第<span class="number">1</span>节：111
           </div>
           <div class="item-actions">
             <a class="btn btn-gray">
