--- a/src/WebBundle/Resources/views/TaskManage/list.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/list.html.twig
@@ -41,7 +41,7 @@
 
       <!-- TODO  删除返回的课程数据，为任务加章节数据 -->
       <div class="task-manage-header clearfix">
-        任务总数：<span class="color-warning space">121</span> 日均约需完成：<span class="color-warning">2.5</span> 个任务
+        任务总数：<span class="color-warning space">{{tasks|length}}</span> 日均约需完成：<span class="color-warning">2.5</span> 个任务
         <div class="pull-right">
           <button class="btn btn-info btn-sm" id="lesson-create-btn" data-toggle="modal" data-target="#modal" data-backdrop="static" data-keyboard="false" data-url="{{ path('course_manage_task_create', {courseId:1}) }}"><i class="es-icon es-icon-anonymous-iconfont"></i> 任务 </button>
           <div class="btn-group">
@@ -111,7 +111,9 @@
           </div>
         </li>
         {% for task in tasks %}
+          {{dump(task)}}
           {% include 'WebBundle:TaskManage:list-item.html.twig' with {task:task} %}
+          }
         {% endfor %}
       </ul>
     </div>
