--- a/src/WebBundle/Resources/assets/less/main.less
+++ b/src/WebBundle/Resources/assets/less/main.less
@@ -1,3 +1,6 @@
 @import '../../../../../app/Resources/assets/libs/less/variable.less';
+
+@import './component/load-animation.less';
+
 @import './task-manage/task-manage.less';
 @import './task-show/task-show.less';
