--- a/src/WebBundle/Resources/assets/less/task-manage/task-manage.less
+++ b/src/WebBundle/Resources/assets/less/task-manage/task-manage.less
@@ -39,12 +39,16 @@
       }
     }
   }
-}
-
-.task-manage-content-iframe {
-  width: 100%;
-  border: none;
-  min-height: 300px;
+  .task-manage-content {
+    min-height: 200px;
+    position: relative;
+    .task-manage-content-iframe {
+      width: 100%;
+      border: none;
+      min-height: 300px;
+    }
+    
+  }
 }
 
 .task-iframe-body {
