--- a/src/WebBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/modal.html.twig
@@ -65,7 +65,7 @@
         </div>
       </form>
     </div>
-    <div id="task-manage-content"></div>
+    <div id="task-manage-content" class="task-manage-content" style="display:none"></div>
     <input class="js-hidden-data" type="hidden" name="fromCourseSetId" value='1'> <!--FIXME 临时赋值 -->
     <input class="js-hidden-data" type="hidden" name="fromCourseId" value='{{ course.id }}'>
   </div>
