--- a/src/WebBundle/Resources/assets/less/task-show/task-show.less
+++ b/src/WebBundle/Resources/assets/less/task-show/task-show.less
@@ -135,6 +135,7 @@
   background-color: #111111;
   height: 100%;
   padding-right: 442px;
+  overflow: hidden;
   &.open {
     padding-right: 0;
     .dashboard-content {
